--- a/trunk/res/layout/bustimes.xml
+++ b/trunk/res/layout/bustimes.xml
@@ -3,5 +3,6 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content">
-<TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="HELLO!"></TextView>
+	<ListView android:id="@android:id/list" android:layout_width="fill_parent" android:layout_height="wrap_content" />
+	<TextView android:id="@android:id/empty" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="No bus times available - press Menu and enter a stop code" />
 </LinearLayout>
