--- a/trunk/res/layout/stopbookmarks_item.xml
+++ b/trunk/res/layout/stopbookmarks_item.xml
@@ -2,7 +2,8 @@
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
-  android:layout_height="wrap_content">
-	<TextView android:id="@+id/stopbookmarks_name" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+  android:layout_height="wrap_content"
+  android:orientation="vertical" >
+	<TextView android:id="@+id/stopbookmarks_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="30sp"/>
 	<TextView android:id="@+id/stopbookmarks_stopcode" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
 </LinearLayout>
