--- a/trunk/res/layout/bustimes.xml
+++ b/trunk/res/layout/bustimes.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="wrap_content"
+  android:layout_width="fill_parent"
   android:layout_height="wrap_content">
 	<ListView android:id="@android:id/list" android:layout_width="fill_parent" android:layout_height="wrap_content" />
-	<TextView android:id="@android:id/empty" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="No bus times available - press Menu and enter a stop code" />
+	<TextView android:id="@android:id/empty" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="No bus times available; press Menu and enter a stop code" />
 </LinearLayout>
