--- a/trunk/res/menu/stopbookmarks_menu.xml
+++ b/trunk/res/menu/stopbookmarks_menu.xml
@@ -2,6 +2,6 @@
 <menu
   xmlns:android="http://schemas.android.com/apk/res/android">
 
-<item android:title="Nearby Stops" android:id="@+id/stopbookmarks_menu_nearby_stops" android:enabled="false"></item>
+<item android:title="Nearby Stops" android:id="@+id/stopbookmarks_menu_nearby_stops" android:enabled="true"></item>
 <item android:title="Bus Times" android:id="@+id/stopbookmarks_menu_bustimes"></item>
 </menu>
