--- a/res/menu/stopbookmarks_item_menu.xml
+++ b/res/menu/stopbookmarks_item_menu.xml
@@ -3,6 +3,6 @@
   xmlns:android="http://schemas.android.com/apk/res/android">
 <item android:id="@+id/stopbookmarks_item_menu_bustimes" android:title="Bus Times"></item>
 <item android:id="@+id/stopbookmarks_item_menu_showonmap" android:title="Show on Map" android:enabled="false"></item>
-<item android:id="@+id/stopbookmarks_item_menu_edit" android:title="Edit" android:enabled="false"></item>
+<item android:id="@+id/stopbookmarks_item_menu_edit" android:title="Edit"></item>
 <item android:id="@+id/stopbookmarks_item_menu_delete" android:title="Delete"></item>
 </menu>
