Add warning about experimental nearby stops feature

--- a/res/menu/bustimes_menu.xml
+++ b/res/menu/bustimes_menu.xml
@@ -7,6 +7,7 @@
 
 <item android:title="Add Bookmark" android:id="@+id/bustimes_menu_addbookmark"></item><item android:title="Settings" android:id="@+id/bustimes_menu_settings" android:enabled="false"><menu><item android:title="Auto Refresh" android:id="@+id/bustimes_menu_autorefresh"></item>
 <item android:title="Sorting" android:id="@+id/bustimes_menu_sorting"></item>
+<item android:id="@+id/bustimes_menu_numdepartures" android:title="Number of Departures"></item>
 </menu>
 </item>
 <item android:title="View on Map" android:id="@+id/bustimes_menu_viewonmap" android:enabled="false"></item>
