--- a/trunk/res/menu/stopbookmarks_menu.xml
+++ b/trunk/res/menu/stopbookmarks_menu.xml
@@ -4,4 +4,5 @@
 
 <item android:title="Nearby Stops" android:id="@+id/stopbookmarks_menu_nearby_stops" android:enabled="true"></item>
 <item android:title="Bus Times" android:id="@+id/stopbookmarks_menu_bustimes"></item>
+<item android:id="@+id/stopbookmarks_menu_addbookmark" android:title="Add Bookmark"></item>
 </menu>
