--- a/trunk/res/layout/bustimes_item.xml
+++ b/trunk/res/layout/bustimes_item.xml
@@ -6,14 +6,14 @@
   android:stretchColumns="1">
   	<TableRow>
 		<TextView 	android:id="@+id/bustimes_service" 
-					android:textSize="30sp" 
+					android:textAppearance="@style/textappearance_service"
 					android:width="60px" />
 					
 		<TextView 	android:id="@+id/bustimes_destination" 
 					android:layout_gravity="center_vertical" />
 					
 		<TextView 	android:id="@+id/bustimes_time" 
-					android:textSize="30sp"
+					android:textAppearance="@style/textappearance_realtime"
 					android:paddingRight="5px" 
 					android:gravity="right" />
 	</TableRow>
