--- a/res/layout/stop_map.xml
+++ b/res/layout/stop_map.xml
@@ -11,7 +11,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:clickable="true"
-        android:apiKey="0aiwQcXJ0Z3LlmfYCS3KmBnaQzUYDH2U2DEUpMA"
+        android:apiKey="MAPSAPIKEY"
     />
     
 </RelativeLayout>
