--- a/res/layout/stopbookmarks_item.xml
+++ b/res/layout/stopbookmarks_item.xml
@@ -4,6 +4,9 @@
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:orientation="vertical" >
-	<TextView android:id="@+id/stopbookmarks_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:textSize="30sp"/>
+	<TextView 	android:id="@+id/stopbookmarks_name" 
+				android:layout_width="fill_parent" 
+				android:layout_height="wrap_content" 
+				android:textAppearance="@style/textappearance_bookmarkname" />
 	<TextView android:id="@+id/stopbookmarks_stopcode" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
 </LinearLayout>
