--- a/trunk/res/layout/stopbookmarks.xml
+++ b/trunk/res/layout/stopbookmarks.xml
@@ -4,5 +4,10 @@
   android:layout_width="fill_parent"
   android:layout_height="wrap_content">
 	<ListView android:id="@android:id/list" android:layout_width="fill_parent" android:layout_height="wrap_content" />
-	<TextView android:id="@android:id/empty" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="No bookmarks - press menu then Nearby Stops or Bus Times to find bus stops and add some!" />
+	<TextView 
+	android:id="@android:id/empty" 
+	android:layout_width="wrap_content" 
+	android:layout_height="wrap_content"
+	android:text="@string/bookmarkhelp"
+	android:textAppearance="@style/textappearance_help" />
 </LinearLayout>
