--- a/res/menu/stopbookmarks_menu.xml
+++ b/res/menu/stopbookmarks_menu.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
-  xmlns:android="http://schemas.android.com/apk/res/android">
-
-<item android:id="@+id/stopbookmarks_menu_nearby_stops" android:title="Nearby Stops map"></item>
-<item android:id="@+id/stopbookmarks_menu_bustimes" android:title="Enter stop code"></item>
-
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+	<item android:id="@+id/stopbookmarks_menu_nearby_stops" android:title="Nearby stops map"></item>
+	<item android:id="@+id/stopbookmarks_menu_bustimes" android:title="Enter StopCode"></item>
 </menu>
