--- a/trunk/res/menu/bustimes_menu.xml
+++ b/trunk/res/menu/bustimes_menu.xml
@@ -21,5 +21,5 @@
 		android:id="@+id/bustimes_menu_viewonmap"
 		android:enabled="false"></item>
 	-->
-	<item android:id="@+id/bustimes_menu_proximityalert" android:title="Set proximity alarm"></item>
+	<item android:id="@+id/bustimes_menu_proximityalert" android:title="Proximity alarm"></item>
 </menu>
