--- a/trunk/res/menu/bustimes_menu.xml
+++ b/trunk/res/menu/bustimes_menu.xml
@@ -16,11 +16,11 @@
 			<item android:id="@+id/bustimes_menu_sorting_arrival" android:title="Arrival time"></item>
 		</menu>
 	</item>
-	<!--
+	
 		<item android:title="View on Map"
-		android:id="@+id/bustimes_menu_viewonmap"
-		android:enabled="false"></item>
-	-->
+		android:id="@+id/bustimes_menu_viewonmap">
+		</item>
+	
 	<item android:id="@+id/bustimes_menu_alerts" android:title="Set bus alarms..."><menu><item android:id="@+id/bustimes_menu_proximityalert" android:title="Set proximity alarm"></item><item android:id="@+id/bustimes_menu_temporalalert" android:title="Set arrival time alarm"></item>
 </menu>
 </item>
