Re-arranged menu items; made text (hopefully) more friendly

--- a/res/menu/bustimes_menu.xml
+++ b/res/menu/bustimes_menu.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 	<item android:id="@+id/bustimes_menu_refresh" android:title="Refresh"></item>
-	<item android:id="@+id/bustimes_menu_enterstopcode" android:title="Change bus stop"></item>
 	<item android:id="@+id/bustimes_menu_bookmarks" android:title="Bookmarks...">
 		<menu>
 			<item android:id="@+id/bustimes_menu_addbookmark" android:title="Add bookmark"></item>
@@ -9,20 +8,22 @@
 			<item android:id="@+id/bustimes_menu_deletebookmark" android:title="Delete bookmark"></item>
 		</menu>
 	</item>
-	<item android:id="@+id/bustimes_menu_futuredepartures" android:title="Future departures"></item>
+	
+	<item android:title="View on Map" android:id="@+id/bustimes_menu_viewonmap"></item>
+	
+	<item android:id="@+id/bustimes_menu_alerts" android:title="Alert me when...">
+	<menu>
+		<item android:id="@+id/bustimes_menu_proximityalert" android:title="I am near this stop"></item>
+		<item android:id="@+id/bustimes_menu_temporalalert" android:title="The bus is due"></item>	
+	</menu>
+	</item>
 	<item android:id="@+id/bustimes_menu_sorting" android:title="Sort by...">
 		<menu>
 			<item android:id="@+id/bustimes_menu_sorting_service" android:title="Service"></item>
 			<item android:id="@+id/bustimes_menu_sorting_arrival" android:title="Arrival time"></item>
 		</menu>
 	</item>
-	
-		<item android:title="View on Map"
-		android:id="@+id/bustimes_menu_viewonmap">
-		</item>
-	
-	<item android:id="@+id/bustimes_menu_alerts" android:title="Set bus alarms..."><menu><item android:id="@+id/bustimes_menu_proximityalert" android:title="Set proximity alarm"></item><item android:id="@+id/bustimes_menu_temporalalert" android:title="Set arrival time alarm"></item>
-</menu>
-</item>
 
+	<item android:id="@+id/bustimes_menu_futuredepartures" android:title="Show future departures"></item>
+	<item android:id="@+id/bustimes_menu_enterstopcode" android:title="Change bus stop"></item>
 </menu>
