--- a/res/menu/stopbookmarks_item_menu.xml
+++ b/res/menu/stopbookmarks_item_menu.xml
@@ -2,7 +2,7 @@
 <menu
   xmlns:android="http://schemas.android.com/apk/res/android">
 <item android:id="@+id/stopbookmarks_item_menu_bustimes" android:title="Bus Times"></item>
-<item android:id="@+id/stopbookmarks_item_menu_showonmap" android:title="Show on Map" android:enabled="false"></item>
+<item android:id="@+id/stopbookmarks_item_menu_showonmap" android:title="Show on Map"></item>
 <item android:title="Rename" android:id="@+id/stopbookmarks_item_menu_rename"></item>
 <item android:id="@+id/stopbookmarks_item_menu_delete" android:title="Delete"></item>
 </menu>
