Replace the terrible time selector with something slightly usable

--- a/res/menu/bustimes_menu.xml
+++ b/res/menu/bustimes_menu.xml
@@ -24,6 +24,6 @@
 		</menu>
 	</item>
 
-	<item android:id="@+id/bustimes_menu_futuredepartures" android:title="Show future departures"></item>
+	<item android:id="@+id/bustimes_menu_futuredepartures" android:title="Future departures..."></item>
 	
 </menu>
