--- a/res/layout/futuredepartures.xml
+++ b/res/layout/futuredepartures.xml
@@ -6,5 +6,8 @@
   android:orientation="vertical">
   
   <Spinner android:id="@+id/futuredepartures_date" android:layout_width="fill_parent" android:layout_height="wrap_content" />
-  <TimePicker android:id="@+id/futuredepartures_time" android:layout_width="fill_parent" android:layout_height="wrap_content" />
+  <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center">
+	  <Spinner android:id="@+id/futuredepartures_time_hour" android:layout_width="wrap_content" android:layout_height="wrap_content"  />
+	  <Spinner android:id="@+id/futuredepartures_time_min" android:layout_width="wrap_content" android:layout_height="wrap_content" />
+  </LinearLayout>
 </LinearLayout>
