Fixed display of error messages

--- a/res/layout/nearbybookmarkedarrivaltime.xml
+++ b/res/layout/nearbybookmarkedarrivaltime.xml
@@ -3,16 +3,25 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content">
-	<ListView android:id="@android:id/list" android:layout_width="fill_parent" android:layout_height="wrap_content" />
+	<ListView android:id="@+id/nearbystopslist" 
+	android:layout_width="fill_parent" 
+	android:layout_height="wrap_content" />
 
-	<TextView android:id="@+id/nearbybookmarkednone" android:layout_width="wrap_content" android:layout_height="wrap_content" 
+	<TextView android:id="@+id/nearbynobookmarks" 
+	android:layout_width="wrap_content" 
+	android:layout_height="wrap_content" 
 	android:text="No bookmarked stops nearby"
 	android:textAppearance="@style/textappearance_help"/>
-
-	<TextView android:id="@android:id/empty" 
+	
+	<TextView android:id="@+id/nearbybookmarkednoservices" 
 	android:layout_width="wrap_content" 
 	android:layout_height="wrap_content" 
 	android:text="No services from nearby stops"
 	android:textAppearance="@style/textappearance_help"/>
-	<TextView android:id="@+id/bustimes_error" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="An error occured while fetching bus times" android:visibility="gone" />
+	
+	<TextView android:id="@+id/bustimes_error" 
+	android:layout_width="wrap_content" 
+	android:layout_height="wrap_content" 
+	android:text="An error occured while fetching bus times" 
+	android:visibility="gone" />
 </LinearLayout>
